refactor: 불필요한 IOException 을 모두 제거
계속 상위로 전파되고 노이즈가 끼는 코드라 과감히 제거
차라리 Exception을 코드 내에서 try/catch로 처리

너저분한 try/catch가 있어도 일단 돌아가면 커밋한번하고 과감하게 이어서 진행